revised distinct method in java streams